--- a/src/index.css
+++ b/src/index.css
@@ -13,17 +13,19 @@ code {
     monospace;
 }
 
-.logo{
+header{
+  display: flex;
+  align-items: center;
   border-radius: 10px;
   margin-top: 10px;
-  padding-left: 300px;
+  padding-left: 50px;
   padding-right: 0px;
 }
 
 .define{
   margin-top: 10px;
   font-size: x-large;
-  padding-left: 230px;
+  padding-left: 50px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
